country.css
*{
    box-sizing: border-box;
 
}

body{
    margin:0;
    font-family: Nunito;
    --background-color:white;
    --text-color:black;
    --elements-color:white;
    background-color: var(--background-color);
    color:var(--text-color);
 
}



body.dark-mode{
   --background-color:hsl(207,26%,17%);
     --text-color:white; 
     --elements-color:hsl(209,23%,22%);
    
}
.country-details-container{
    max-width: 1200px;
    width: 100%;
    margin-inline: auto;
    margin-top:32px;
    flex:1;
}
.country-details span{
    word-wrap:break-word;
    overflow-wrap:break-word;
}
.sun{
    display:none;
    cursor: pointer;
}
.header-container{ 
     box-shadow: 0 2px 4px 0 rgba(0 ,0 ,0, 0.1);
       padding-inline: 24px;
       /* margin-top:16px; */
         background-color: var(--elements-color);
         
     
  

}
.header-content{
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 1200px;
    margin-inline:auto;
}
.moon{
    cursor: pointer;
}
main{
    padding:24px;

}
a{
    text-decoration: none;
    color:inherit;
}
.back-button{
    padding: 6px 6px;
    box-shadow: 0 0 4px 0 rgba(0,0,0,0.2);
    border-radius: 4px;
    cursor: pointer;
    background-color: var(--elements-color);
}

.country-details{
    display: flex;
    align-items: center;
    gap:64px;
    margin-top:64px;
      min-width: 0;

    
}
.country-details div{
    max-width: 100%;
}
/* .details-text {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 12px 64px;
} */

.country-details img{
     max-width:30%;
border:1px solid #DDD;
}
.details-text{
       display:flex;
       flex-direction:column;
       row-gap:12px;
       column-gap:64px;
       max-height: 180px;
       flex-wrap: wrap;
}
/* .details-text span{
    word-break: break-word;
} */
.details-text p{
    margin:0;
}

.border-countries{
            margin-top:48px;
            display: flex;
            align-items: flex-start;
            flex-wrap:wrap;
            gap:10px;
         
}
.border-countries img{
    width: 30px;
    height: 25px;
    border-fit:cover;
    border-radius: 4px;
}
.border-countries span{
    margin-left:4px;
    margin-top:1px;
    font-size:16px;
    white-space:nowrap;
}

         
.border-countries a{display: flex;
    padding: 4px 8px;
    box-shadow: 0 0 4px 0 rgba(0,0,0,0.2);
    border-radius: 4px; 
    font-size:14px;
       background-color:var(--elements-color) ;

}
.border-countries a:hover{
    box-shadow: 0 0 8px 0 rgba(57, 137, 156, 0.363);
}


@media(max-width:1140px){
 .country-details{
    flex-direction:column;
    align-items: flex-start;
    margin-top: 32px;
    gap:32px;
  
 }
 .details-text{
    max-height:unset;
 }
 .country-details img{
    width:100%;
    max-width: 400px;
 }
 .title{
    font-size: 16px;
 }
 .header-content p{
    font-size: 12px;
 }
 
}
@media(max-width:400px){
    .country-details img{
     max-width:100%;
}

}

